@@ -1,6 +1,6 @@
 {
   "name": "simp-logrotate",
-  "version": "6.3.1",
+  "version": "6.3.2",
   "author": "SIMP Team",
   "summary": "configure SIMP logrotate",
   "license": "Apache-2.0",
