@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.3.2-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Mon Mar 11 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.3.1-0
 - Updated a URL in the README.md
 
